--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,5 +19,5 @@
 body {
   background: rgb(31, 210, 255);  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #A6FFCB, #2abbd4, #025770);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #A6FFCB, #39c9e2, #044b61); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: linear-gradient(to right, #A6FFCB, #71d3e4, #044b61); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   }
